--- a/chemnaFC/templates/chemnaFC/squad.html
+++ b/chemnaFC/templates/chemnaFC/squad.html
@@ -7,7 +7,7 @@
 {% include "chemnaFC/header/header.html" %}
 </header>
 <style>
-     .home-link {
+  .home-link {
     display: inline-block;
     padding: 10px 20px;
     background-color: #4CAF50;
@@ -24,7 +24,7 @@
   }
 
   .team-squad {
-    max-width: 400px;
+    max-width: 800px;
     margin: 0 auto;
     padding: 20px;
     background-color: #f8f8f8;
@@ -49,6 +49,15 @@
   .team-squad li {
     margin-bottom: 10px;
     line-height: 1.5;
+    background-color: #fff;
+    padding: 10px;
+    border-radius: 4px;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+    transition: transform 0.2s ease-in-out;
+  }
+
+  .team-squad li:hover {
+    transform: translateY(-3px);
   }
 
   .team-squad a {
@@ -78,7 +87,7 @@
 <div class="team-squad">
   <h3>Team Squad</h3>
 
-  <ul>
+  <ul type="none">
     {% for player in squad %}
       <li>
         <a href="{% url 'players_information' player.pname %}">{{ player.pname|title }}</a>
@@ -88,5 +97,7 @@
       </li>
     {% endfor %}
   </ul>
+
+  <a class="home-link" href="{% url 'index_page' %}">Home</a>
 </div>
-<p><a class="home-link" href="{% url 'index_page' %}">Home</a></p>{% endblock %}
+{% endblock %}
