--- a/chemnaFC/templates/chemnaFC/fan.html
+++ b/chemnaFC/templates/chemnaFC/fan.html
@@ -1,4 +1,4 @@
-{% comment %} {% extends "base.html" %}
+{% extends "base.html" %}
 
 {% block title %}Chemna Football Club{% endblock %}
 
@@ -64,4 +64,4 @@
 </div>
 <p><a class="home-link" href="{% url 'index_page' %}">Home</a></p>
 
-{% endblock %} {% endcomment %}
+{% endblock %}
