add java script

--- a/chemnaFC/templates/chemnaFC/forgot.html
+++ b/chemnaFC/templates/chemnaFC/forgot.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-
+{% comment %} 
 {% block title %}forgot{% endblock title %}
 
 {% block content %}
@@ -8,6 +8,6 @@
     {{form.as_p}}
 </form>
 {% endblock content %}
-
+ {% endcomment %}
 
 
