add java script

--- a/chemnaFC/templates/chemnaFC/index.html
+++ b/chemnaFC/templates/chemnaFC/index.html
@@ -1,4 +1,4 @@
-{% comment %} {% extends "base.html" %}
+{% extends "base.html" %}
 {% load static %}
 
 {% block content %}
@@ -127,4 +127,4 @@
   </p>
 </div>
 
-{% endblock %} {% endcomment %}
+{% endblock %}
