--- a/chemnaFC/templates/chemnaFC/login.html
+++ b/chemnaFC/templates/chemnaFC/login.html
@@ -1,4 +1,4 @@
-<!-- login.html -->
+{% comment %} <!-- login.html -->
 
 {% extends "base.html" %}
 
@@ -88,4 +88,4 @@
     </form>
     <p class="signup-link">Don't have an account? <a href="{% url "register_page" %}">Sign up</a></p>
 </div>
-{% endblock content %}
+{% endblock content %} {% endcomment %}
