add java script

--- a/chemnaFC/templates/chemnaFC/pictureview.html
+++ b/chemnaFC/templates/chemnaFC/pictureview.html
@@ -1,4 +1,4 @@
-{% comment %} {% extends "base.html" %}
+{% extends "base.html" %}
 {% block title %}profile picture{% endblock  %}
 
 {% block content %}
@@ -7,4 +7,4 @@
   
   {% endfor %}
 <p><a class="home-link" href="{% url 'index_page' %}">Home</a></p>
-{% endblock  %} {% endcomment %}
+{% endblock  %}
