--- a/chemnaFC/templates/chemnaFC/register.html
+++ b/chemnaFC/templates/chemnaFC/register.html
@@ -1,4 +1,4 @@
-{% comment %} {% load static %}
+{% load static %}
 <style>
     body {
       font-family: Arial, sans-serif;
@@ -112,4 +112,4 @@
 
   </main>
 
-  <script src="{% static 'script.js' %}"></script> {% endcomment %}
+  <script src="{% static 'script.js' %}"></script>
