add java script

--- a/chemnaFC/templates/chemnaFC/single_fan.html
+++ b/chemnaFC/templates/chemnaFC/single_fan.html
@@ -1,4 +1,4 @@
-{% comment %} {% comment %} {% extends "base.html" %}
+{% extends "base.html" %}
 
 {% block title %}Single Fan Detail{% endblock %}
 
@@ -94,4 +94,4 @@
 
 <!-- Add the Font Awesome library -->
 <script src="https://kit.fontawesome.com/your-font-awesome-kit.js" crossorigin="anonymous"></script>
-<p><a class="home-link" href="{% url 'fan_list_page' %}">FAN'S</a></p>{% endblock %} {% endcomment %} {% endcomment %}
+<p><a class="home-link" href="{% url 'fan_list_page' %}">FAN'S</a></p>{% endblock %}
