--- a/chemnaFC/templates/chemnaFC/squad.html
+++ b/chemnaFC/templates/chemnaFC/squad.html
@@ -1,4 +1,4 @@
-{% comment %} {% extends "base.html" %}
+{% extends "base.html" %}
 
 {% block title %}Chemna Football Club{% endblock %}
 
@@ -100,4 +100,4 @@
 
   <a class="home-link" href="{% url 'index_page' %}">Home</a>
 </div>
-{% endblock %} {% endcomment %}
+{% endblock %}
