--- a/chemnaFC/templates/chemnaFC/thankyou.html
+++ b/chemnaFC/templates/chemnaFC/thankyou.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% comment %} {% extends "base.html" %}
 
 {% block title %}Thank You{% endblock %}
 
@@ -52,4 +52,4 @@
   <p><a class="home-link" href="{% url 'login_page' %}">LOG IN</a></p>
   <p><a class="home-link" href="{% url 'index_page' %}">HOME</a></p>
 </div>
-{% endblock %}
+{% endblock %} {% endcomment %}
