--- a/chemnaFC/templates/chemnaFC/index.html
+++ b/chemnaFC/templates/chemnaFC/index.html
@@ -126,5 +126,6 @@
     Whether you are a dedicated fan, a passionate player, or simply someone who appreciates the beautiful game, we invite you to join us on this incredible journey. Explore our website to stay up-to-date with the latest news, fixtures, player profiles, and exclusive content. Together, let's celebrate the joy and thrill of football with Chemna Football Club.
   </p>
 </div>
+<footer>{% include "chemnaFC/header/footer.html" %}</footer>
 
 {% endblock %}
