--- a/chemnaFC/templates/chemnaFC/header/header.html
+++ b/chemnaFC/templates/chemnaFC/header/header.html
@@ -24,6 +24,7 @@
     height: 50px;
     border-radius: 50%;
     overflow: hidden;
+    margin-right: 10px;
   }
 
   .logo img {
@@ -38,7 +39,6 @@
     vertical-align: middle;
     font-size: 24px;
     color: #ffcc00; /* Yellow color for club name */
-    margin-left: 10px;
     text-decoration: none;
     transition: color 0.3s ease;
   }
@@ -51,8 +51,9 @@
   .navigation {
     display: inline-block;
     vertical-align: middle;
-    margin-left: 20px;
     list-style-type: none;
+    margin: 0;
+    padding: 0;
   }
 
   .navigation li {
@@ -70,6 +71,7 @@
     padding: 5px 10px;
     border-radius: 4px;
     transition: background-color 0.3s ease;
+    background-color: #333; /* Dark background color for links */
   }
 
   .navigation li a:hover {
@@ -79,14 +81,14 @@
 
 <header class="header">
   <div class="logo">
-    <img src="{% static "chemnaFC/images/logo.png" %}" alt="logo">
+    <img src="{% static 'chemnaFC/images/logo.png' %}" alt="logo">
   </div>
   <a href="{% url 'index_page' %}" class="club-name">Chemna Football Club CFC</a>
   <ul class="navigation">
-    <li><a href="{% url "table_page" %}" style="background-color: #ff0000;">Table</a></li> <!-- Red color for Table -->
-    <li><a href="{% url "match_page" %}" style="background-color: #00ff00;">Match</a></li> <!-- Green color for Match -->
-    <li><a href="{% url "squad_page" %}" style="background-color: #0000ff;">Squad</a></li> <!-- Blue color for Squad -->
-    <li><a href="{% url "fan_page" %}" style="background-color: #ff00ff;">Fan</a></li> <!-- Purple color for Fan -->
-    <li><a href="{% url "login_page" %}" style="background-color: #ffff00;">Login</a></li> <!-- Yellow color for Login -->
+    <li><a href="{% url 'table_page' %}">Table</a></li>
+    <li><a href="{% url 'match_page' %}">Match</a></li>
+    <li><a href="{% url 'squad_page' %}">Squad</a></li>
+    <li><a href="{% url 'fan_page' %}">Fan</a></li>
+    <li><a href="{% url 'login_page' %}">Login</a></li>
   </ul>
 </header>
