--- a/chemnaFC/templates/chemnaFC/fan_list.html
+++ b/chemnaFC/templates/chemnaFC/fan_list.html
@@ -133,7 +133,7 @@
   <div class="logout">
     <a href="{% url 'logout_page' %}">Logout</a>
   </div>
-  <p class="hello-user">Hello {{ request.user }}</p>
+  <p class="hello-user">Hi! {{ request.user }}</p>
   <div class="home">
     <a href="{% url 'index_page' %}">Home</a>
   </div>
