--- a/chemnaFC/templates/chemnaFC/header/footer.html
+++ b/chemnaFC/templates/chemnaFC/header/footer.html
@@ -1,8 +1,8 @@
 <footer class="footer">
   <div class="footer-content">
-    <p>Contact: contact@chemnafc.com</p>
+    <p>Contact: biluyb338@gmail.com    </p>
     <ul class="footer-links">
-      <li>Privacy Policy</a></li>
+      <li>     Privacy Policy    </a></li>
       <li>Terms & Conditions</a></li>
     </ul>
   </div>
@@ -14,14 +14,12 @@
     background-color: #333; /* Dark background color */
     color: #fff; /* White text color */
     padding: 10px;
-    text-align: center;
     font-family: Arial, sans-serif;
   }
 
   .footer-content {
     display: flex;
     justify-content: center;
-    align-items: center;
     flex-wrap: wrap;
   }
 
