--- a/chemnaFC/templates/chemnaFC/match.html
+++ b/chemnaFC/templates/chemnaFC/match.html
@@ -121,4 +121,6 @@
 
   <a class="home-link" href="{% url 'index_page' %}">Home</a>
 </div>
+<footer>{% include "chemnaFC/header/footer.html" %}</footer>
+
 {% endblock %}
