--- a/chemnaFC/templates/chemnaFC/single_fan.html
+++ b/chemnaFC/templates/chemnaFC/single_fan.html
@@ -91,7 +91,7 @@
   <li><strong>Fan Name:</strong> {{ single_fan.name }}</li>
   <li><strong>Sex:</strong> {{ single_fan.gender }}</li>
   <li><strong>Email:</strong> {{ single_fan.email }}</li>
-  <li><strong>Level:</strong> {{ single_fan.fan_level }}</li>
+  <li><strong>Fan Level: level</strong> ({{ single_fan.fan_level }})</li>
   <li><strong>Password:</strong> {{ single_fan.password }}</li>
 </ul>
 
