--- a/chemnaFC/templates/chemnaFC/table.html
+++ b/chemnaFC/templates/chemnaFC/table.html
@@ -98,4 +98,6 @@
   </table>
 </div>
 <p><a class="home-link" href="{% url 'index_page' %}">Home</a></p>
+<footer>{% include "chemnaFC/header/footer.html" %}</footer>
+
 {% endblock %}
