--- a/chemnaFC/templates/chemnaFC/header/footer.html
+++ b/chemnaFC/templates/chemnaFC/header/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer">
+{% comment %} <footer class="footer">
   <div class="footer-content">
     <p>Contact: biluyb338@gmail.com    </p>
     <ul class="footer-links">
@@ -52,4 +52,4 @@
   .footer-links a:hover {
     color: #ff9900; /* Lighter orange color on hover */
   }
-</style>
+</style> {% endcomment %}
