--- a/chemnaFC/templates/chemnaFC/header/footer.html
+++ b/chemnaFC/templates/chemnaFC/header/footer.html
@@ -62,4 +62,13 @@
   .footer-links a:hover {
     color: #ff9900; /* Lighter orange color on hover */
   }
+
+  /* Change the text color for Privacy Policy and Terms & Conditions */
+  .footer-links li:first-child a {
+    color: #ff9900; /* Change the color for Privacy Policy */
+  }
+
+  .footer-links li:last-child a {
+    color: #ff9900; /* Change the color for Terms & Conditions */
+  }
 </style>
