--- a/chemnaFC/templates/chemnaFC/header/header.html
+++ b/chemnaFC/templates/chemnaFC/header/header.html
@@ -88,7 +88,7 @@
     <li><a href="{% url 'table_page' %}">Table</a></li>
     <li><a href="{% url 'match_page' %}">Match</a></li>
     <li><a href="{% url 'squad_page' %}">Squad</a></li>
-    <li><a href="{% url 'fan_page' %}">Fan</a></li>
-    <li><a href="{% url 'login_page' %}">Login</a></li>
+    <li><a href="{% url 'fanPage' %}">Fan</a></li>
+    <li><a href="{% url 'login_page' %}">Login</a></li>    <li><a href="{% url 'logout_page' %}">logout</a></li>
   </ul>
 </header>
